--- a/child_pages/cc-elections/Candidates/ciattarelli.html
+++ b/child_pages/cc-elections/Candidates/ciattarelli.html
@@ -10,8 +10,8 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Jack Ciatarelli">
-        <meta property="og:description" content="Election information about Jack Ciatarelli">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
+        <meta property="og:description" content="Candidate Information About Jack Ciatarelli">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/ciatarelli.jpg">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/ciatarelli">
     </head>
 <!-- Google tag (gtag.js) -->
