--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -13,9 +13,9 @@
     <title>Inform The Vote</title>
     <!-- Begin preview image meta tags -->
         <meta property="og:title" content="Inform The Vote NJ">
-        <meta property="og:description" content="Election Information for Cumberland County Residents">
-        <meta property="og:image" content="http://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
-        <meta property="og:url" content="http://informthevotenj.com">
+        <meta property="og:description" content="Candidate and Issues Information for Cumberland County Elections">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="https://informthevotenj.com">
         <!-- End preview image meta tags -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
