--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -10,7 +10,7 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Douglas A. Albrecht">
-        <meta property="og:description" content="Election information about Douglas A. Albrecht">
+        <meta property="og:description" content="Candidate Information about Douglas A. Albrecht">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/albrecht.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/albrecht">
     </head>
