--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -10,9 +10,9 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Yolanda G. Balicki">
-        <meta property="og:description" content="Election information about Yolanda G. Balicki">
-        <meta property="og:image" content="http://www.informthevotenj.com/assets/candidates/balicki.jpg">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/balicki">
+        <meta property="og:description" content="Candidate Information About Yolanda G. Balicki">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/balicki.jpg">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/balicki">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
