--- a/child_pages/cc-elections/Candidates/brent.html
+++ b/child_pages/cc-elections/Candidates/brent.html
@@ -11,8 +11,8 @@
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Kenneth E Brent">
         <meta property="og:description" content="Election information about Kenneth E Brent">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/brent">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/brent">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
