--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - J.R. Carman">
-        <meta property="og:description" content="Election information about J.R. Carman">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/carman">
+        <meta property="og:title" content="Inform The Vote NJ - John R. Carman">
+        <meta property="og:description" content="Candidate Information About John R. Carman">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/carman">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
