--- a/child_pages/cc-elections/Candidates/konawell.html
+++ b/child_pages/cc-elections/Candidates/konawell.html
@@ -10,9 +10,9 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Chris Konawell">
-        <meta property="og:description" content="Election information about Chris Konawell">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/konawell">
+        <meta property="og:description" content="Candidate Information About Chris Konawell">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/konawell.jpg">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/konawell">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
@@ -240,7 +240,7 @@
              <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on June 10th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
