--- a/child_pages/cc-elections/Candidates/pierce.html
+++ b/child_pages/cc-elections/Candidates/pierce.html
@@ -10,9 +10,9 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Marvin R Pierce">
-        <meta property="og:description" content="Election information about Marvin R Pierce">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/pierce">
+        <meta property="og:description" content="Candidate Information About Marvin R Pierce">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/pierce">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
