--- a/child_pages/cc-elections/Candidates/sherrill.html
+++ b/child_pages/cc-elections/Candidates/sherrill.html
@@ -10,9 +10,9 @@
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Mikie Sherrill">
-        <meta property="og:description" content="Election information about Mikie Sherrill">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/sherrill">
+        <meta property="og:description" content="Candidate Information about Mikie Sherrill">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/sherrill.jpg">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/sherrill">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
