--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -10,9 +10,9 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:title" content="Inform The Vote NJ - Erik K. Simonsen">
-        <meta property="og:description" content="Election information about Erik K. Simonsen">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/simonsen">
+        <meta property="og:description" content="Candidate Information About Erik K. Simonsen">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/simonsen.webp">
+        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/simonsen">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
