--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <script src="homepage_scripts.js" async></script>
         <!-- Begin preview image meta tags -->
         <meta property="og:title" content="Inform The Vote NJ">
-        <meta property="og:description" content="Election Information for Cumberland County Residents">
-        <meta property="og:image" content="http://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
-        <meta property="og:url" content="http://informthevotenj.com">
+        <meta property="og:description" content="Candidate and Issues Information for Cumberland County Elections">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="https://informthevotenj.com">
         <!-- End preview image meta tags -->
 
         <!-- Instructions -->
