meta tags for race and issue pages

--- a/child_pages/cc-elections/millville_city_issues.html
+++ b/child_pages/cc-elections/millville_city_issues.html
@@ -11,6 +11,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
 <script src="../../app.js" async></script>
+<!-- Begin preview image meta tags -->
+        <meta property="og:title" content="Inform The Vote NJ">
+        <meta property="og:description" content="Candidate and Issues Information for the Millville Commissioners Election">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="https://informthevotenj.com">
+        <!-- End preview image meta tags -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
 <script>
