--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -12,10 +12,12 @@
 <link href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
 <script src="../../../app.js" async></script>    
 <title>Inform The Vote</title>
-<meta property="og:title" content="Inform The Vote NJ - State Assembly, Legislative District 1 Election">
-        <meta property="og:description" content="Election information about State Assembly - Legislative District 1">
-        <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
-        <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/state_assembly_legislative_district_1">
+<!-- Begin preview image meta tags -->
+        <meta property="og:title" content="Inform The Vote NJ">
+        <meta property="og:description" content="Candidate and Issues Information for the General Assembly LD1 Election">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
+        <meta property="og:url" content="https://informthevotenj.com">
+        <!-- End preview image meta tags -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
 <script>
