index page meta tag fix test

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="icon" sizes="512x512" href="/assets/homescreenIcon/informSquareLogo.png">
         <script src="homepage_scripts.js" async></script>
         <!-- Begin preview image meta tags -->
+        <meta property="og:type" content="website">
         <meta property="og:title" content="Inform The Vote NJ">
         <meta property="og:description" content="Candidate and Issues Information for Cumberland County Elections">
         <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
