--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
+        <meta property="og:type" content="website">
         <meta property="og:title" content="Inform The Vote NJ - John P. Capizola">
         <meta property="og:description" content="Candidate Information About John P. Capizola">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/capizola.jpg">
