--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -10,8 +10,8 @@
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Inform The Vote NJ - John P. Capizola">
-        <meta property="og:description" content="Candidate Information About John P. Capizola">
+        <meta property="og:title" content="Candidate John P. Capizola">
+        <meta property="og:description" content="Running For Cumberland County Commissioner">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/capizola.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/capizola">
     </head>
