--- a/child_pages/cc-elections/Candidates/ciattarelli.html
+++ b/child_pages/cc-elections/Candidates/ciattarelli.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Jack Ciatarelli">
-        <meta property="og:description" content="Candidate Information About Jack Ciatarelli">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Jack Ciatarelli">
+        <meta property="og:description" content="Running for Governor">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/ciatarelli.jpg">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/ciatarelli">
     </head>
