--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Rachel Green">
-        <meta property="og:description" content="Candidate Information About Rachel Green">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Rachel Green">
+        <meta property="og:description" content="Running For Millville City Commission">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/green.avif">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/green">
     </head>
