--- a/child_pages/cc-elections/Candidates/moore.html
+++ b/child_pages/cc-elections/Candidates/moore.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Lawrence A. Moore">
-        <meta property="og:description" content="Candidate Information About Lawrence A. Moore">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Lawrence A. Moore">
+        <meta property="og:description" content="Running for General Assembly, Legislative District 3">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/moore.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/moore">
     </head>
