--- a/child_pages/cc-elections/Candidates/sherrill.html
+++ b/child_pages/cc-elections/Candidates/sherrill.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Mikie Sherrill">
-        <meta property="og:description" content="Candidate Information about Mikie Sherrill">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Mikie Sherrill">
+        <meta property="og:description" content="Running for Governor">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/sherrill.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/sherrill">
     </head>
