--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Yolanda G. Balicki">
-        <meta property="og:description" content="Candidate Information About Yolanda G. Balicki">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Yolanda G. Balicki">
+        <meta property="og:description" content="Running For Cumberland County Commissioner">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/balicki.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/balicki">
     </head>
