--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Dan Dixon">
-        <meta property="og:description" content="Election information about Dan Dixon">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Dan Dixon">
+        <meta property="og:description" content="Running for Millville City Commission">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/dixon.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/dixon">
     </head>
