--- a/child_pages/cc-elections/Candidates/henry.html
+++ b/child_pages/cc-elections/Candidates/henry.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Darlington Henry">
-        <meta property="og:description" content="Candidate Information About Darlington Henry">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Darlington Henry">
+        <meta property="og:description" content="Running For Fairfield Township Committee">
         <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/henry">
     </head>
