--- a/child_pages/cc-elections/Candidates/konawell.html
+++ b/child_pages/cc-elections/Candidates/konawell.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Chris Konawell">
-        <meta property="og:description" content="Candidate Information About Chris Konawell">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Chris Konawell">
+        <meta property="og:description" content="Running For General Assembly, Legislative District 3">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/konawell.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/konawell">
     </head>
