--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Robert McQuade">
-        <meta property="og:description" content="Candidate Information About Robert McQuade">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Robert McQuade">
+        <meta property="og:description" content="Running For Millville City Commission">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/mcquade.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/mcquade">
     </head>
