--- a/child_pages/cc-elections/Candidates/vasquez.html
+++ b/child_pages/cc-elections/Candidates/vasquez.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Luz Vasquez">
-        <meta property="og:description" content="Candidate Information About Luz Vasquez">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Luz Vasquez">
+        <meta property="og:description" content="Running for Vineland Board of Education">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/vasquez.jpg">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/vasquez">
     </head>
