--- a/child_pages/cc-elections/Candidates/white_isaiah.html
+++ b/child_pages/cc-elections/Candidates/white_isaiah.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - John Tisa">
-        <meta property="og:description" content="Election information about John Tisa">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Isaiah L. White">
+        <meta property="og:description" content="Running For Vineland Board of Education">
         <meta property="og:image" content="https://i.postimg.cc/hGHsKm2M/informthevotepreviewimg.png">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/tisa">
     </head>
