--- a/child_pages/cc-elections/Candidates/williams.html
+++ b/child_pages/cc-elections/Candidates/williams.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="../../../dual_model_candidate.js" async></script>
         <title>Inform The Vote</title>
-        <meta property="og:title" content="Inform The Vote NJ - Tyrone D. Williams">
-        <meta property="og:description" content="Candidate Information About Tyrone D. Williams">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Candidate Tyrone D. Williams">
+        <meta property="og:description" content="Running For Bridgeton Board of Education">
         <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
         <meta property="og:url" content="http://www.informthevotenj.com/child_pages/cc-elections/candidates/williams">
     </head>
