linda milettas pic added

--- a/child_pages/cc-elections/Candidates/miletta_linda.html
+++ b/child_pages/cc-elections/Candidates/miletta_linda.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Linda C. Miletta">
         <meta property="og:description" content="Running For Hopewell-Shiloh Board of Education">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/linda_miletta.PNG">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/miletta_linda">
     </head>
 <!-- Google tag (gtag.js) -->
@@ -199,7 +199,7 @@
     </div>
 
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/.jpg" alt="Candidate photo of Linda Miletta" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/linda_miletta.PNG" alt="Candidate photo of Linda Miletta" class="candidate-pic">
         <div class="candidate-pic-box-content">
         <h4 class="sub-heading" style="text-align: center;">Websites</h4>
         <div class="website">
