luz meta tag fix attempt

--- a/child_pages/cc-elections/Candidates/vasquez.html
+++ b/child_pages/cc-elections/Candidates/vasquez.html
@@ -12,8 +12,8 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Luz Vasquez">
         <meta property="og:description" content="Running for Vineland Board of Education">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/vasquez.jpg">
-        <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/vasquez">
+        <meta property="og:image" content="https://informthevotenj.com/assets/candidates/vasquez.jpg">
+        <meta property="og:url" content="https://informthevotenj.com/child_pages/cc-elections/candidates/vasquez">
     </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
@@ -229,7 +229,7 @@
             <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
             <button class="candidate-ext-site">Transparency Standards Explained</button>
             </a>
-            <img class="gauge" src="../../../assets/gauge_slight_right.svg" alt="">
+            <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
             <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
         </div>
 
@@ -380,7 +380,7 @@
             <div class="experience can-sec">
                 <h5 style="margin: 0 0 0.5rem 0;">Original Candidate Questionnaire Submission <span style="font-weight: normal;">(August 2025)</span></h5>
                 <br>
-                <h6>Relevant Background and Experience</h6>
+                <h4>Relevant Background and Experience</h4>
                 <br>
                 <p>As a lifelong Vineland resident, a product of the Vineland public school system and a very proud graduate of Vineland High School, 
                     I am personally invested in the mission to improve student outcomes while looking out for the best interest of local taxpayers 
@@ -402,7 +402,7 @@
                 </p>
                 <br>
                 <br>
-                <h6>Overall Agenda</h6>
+                <h4>Overall Agenda</h4>
                 <br>
                 <p>
                 There is no single item that defines my candidacy. Improving student outcomes is a complex issue with many variables. More specifically,
@@ -420,7 +420,7 @@
                 </p>
                 <br><br>
 
-                <h6>Issue Positions</h6>
+                <h4>Issue Positions</h4>
                 <br>
                 <p>
                 <strong>Parental Rights</strong> is a priority for me. Parents have the primary authority and influence over their child’s upbringing. I believe
@@ -434,7 +434,7 @@
                 </p>
                 <br><br>
 
-                <h6>Party Affiliation and Ideology</h6>
+                <h4>Party Affiliation and Ideology</h4>
                 <br>
                 <p>
                 This is a non-partisan election, and I do not wish to alienate any voters because of party affiliation. However, as a person of faith, I
@@ -442,7 +442,7 @@
                 </p>
                 <br><br>
 
-                <h6>Campaign Events</h6>
+                <h4>Campaign Events</h4>
                 <br>
                 <p>
                 I do not have formal campaign events scheduled, but I continue to make my rounds at local book bag drives and community block parties,
@@ -450,7 +450,7 @@
                 </p>
                 <br><br>
 
-                <h6>Comparison</h6>
+                <h4>Comparison</h4>
                 <br>
                 <p>
                 I can only speak for myself. For many years, I have built a reputation for advocating on behalf of children and parents—making presentations
