official ballot test ld1 page

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -249,6 +249,11 @@
                 Candidate Transparency/Accessibility Chart
         </a>
 
+        <details>
+            <summary>View Official Ballot</summary>
+            <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" style="max-width:100%; height:auto; margin-top:10px;">
+        </details>
+
         <br>
 
         <div class="sb-top-box"> 
