--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <ul class="links">
 
                         <li class="link"><a id="home" href="https://www.informthevotenj.com/index.html">Home</a></li>
-                        <li class="link"><a id="home" href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots</a></li>
+                        <!-- <li class="link"><a id="home" href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots</a></li> -->
 
                         
                         <div class="accordion">
@@ -330,7 +330,7 @@
                 </div>
                 <div class="nav-buttons-2">
                     <div class="elections-dropdown-links">
-                        <!-- <a href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots Page</a> -->
+                        <a href="child_pages/cc-elections/official_ballots_2024.html">Official Ballots Page</a>
                         <a href="child_pages/cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a>
                         <a href="child_pages/cc-elections/fairfield_township_committee.html">Fairfield Township Committee</a>
 
