official ballot link style adjustment

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -251,7 +251,9 @@
 
         <details>
             <summary>View Official Ballot</summary>
-            <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" style="max-width:100%; height:auto; margin-top:10px;">
+            <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" 
+            style="display:inline-block;cursor:pointer;background-color:#007BFF;color:white;padding:10px 20px;border-radius:8px;font-size:1.2em;font-weight:bold;
+            margin:10px 0;max-width:100%; height:auto; margin-top:10px;">
         </details>
 
         <br>
