restructure ld1 race page

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -193,7 +193,21 @@
 
     <div id="sample-ballot">
 
-        <h4 class="sub-heading-ballot">What does a General AssemblyPerson do?</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of This Page</h4>
+
+        <div class="job-description can-sec">
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Suggested Steps</summary>
+                <ol style="margin-top:10px; line-height:1.6;">
+                    <li>If this is your first time taking a close look at local politics, make sure you read about what a General AssemblyPerson is.</li>
+                    <li>Read the quick election summary to get an overhead view of what is going on in the race.</li>
+                    <li>Review the candidates on the Unofficial Ballot.</li>
+                    <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
+                </ol>
+            </details>
+        </div>
+
+        <h4 class="sub-heading-ballot" style="text-align: center;">What does a General AssemblyPerson do?</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
@@ -244,23 +258,20 @@
 
         <br>
 
-        <a href="../cc-elections/assembly_ld1_transparency_chart.html"
+        <!-- <a href="../cc-elections/assembly_ld1_transparency_chart.html"
                 style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
                 Candidate Transparency/Accessibility Chart
-        </a>
-
-        <details>
-            <summary style="cursor:pointer; color:blue; text-decoration:underline; text-align: center;">View Official Ballot</summary>
-            <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" 
-            style="display:inline-block;cursor:pointer;background-color:#007BFF;color:white;padding:10px 20px;border-radius:8px;font-size:1.2em;font-weight:bold;
-            margin:10px 0;max-width:100%; height:auto; margin-top:10px;">
-        </details>
+        </a> -->
 
         <br>
 
         <div class="sb-top-box"> 
             <h3>GENERAL ELECTION DATE: November 4th, 2025</h3>
-            <h2>SAMPLE BALLOT</h2>
+            <h2>UNOFFICIAL BALLOT</h2>
+            <p>
+                Below is not exactly what you'll see sent to your house or in the voting booth, only an approximation based on website design considerations and focus on specific races. 
+                Please review the official ballot beneath the unofficial ballot before voting.
+            </p>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
             <h3>General Assembly</h3>
             <h4>DEMOCRATIC</h4>
@@ -492,5 +503,11 @@
             <div class="end-text">Form 14 - Vineland W6 D-4</div>
     </div> <!-- end of sample ballot -->
 
+    <details>
+            <summary style="cursor:pointer; color:blue; text-decoration:underline; text-align: center; font-size: 1.5em;">View Official Ballot</summary>
+            <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" 
+            style="display:inline-block;cursor:pointer;background-color:#007BFF;color:white;padding:10px 20px;border-radius:8px;font-size:1.2em;font-weight:bold;
+            margin:10px 0;max-width:100%; height:auto; margin-top:10px;">
+    </details>
 </body>
 </html>
