issues section added to ld1 page

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -201,8 +201,9 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Suggested Steps</summary>
                 <ol style="margin-top:10px; line-height:1.6;">
-                    <li>If this is your first time taking a close look at local politics, make sure you read about what a General AssemblyPerson is.</li>
+                    <li>If this is your first time taking a close look at local politics, make sure you read about what the role of this office is.</li>
                     <li>Read the quick election summary to get an overhead view of what is going on in the race.</li>
+                    <li>Review the issues related to the district and office which we've been able to identify</li>
                     <li>Review the candidates on the Unofficial Ballot.</li>
                     <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
                 </ol>
@@ -264,6 +265,8 @@
                 style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
                 Candidate Transparency/Accessibility Chart
         </a> -->
+
+        <a style="text-align: center; font-size: 1.5em;">Legislative 1 District Issues</a>
 
         <br>
 
