more ld1 restructuring 2

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -199,7 +199,7 @@
 
         <div class="job-description can-sec">
             <details>
-                <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Suggested Steps</summary>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <ol style="margin-top:10px; line-height:1.6;">
                     <li>If this is your first time taking a close look at local politics, make sure you read about what the role of this office is.</li>
                     <li>Read the quick election summary to get an overhead view of what is going on in the race.</li>
@@ -256,7 +256,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot" style="text-align: center;">Quick Election Summary</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Quick Election Intro</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
@@ -315,7 +315,7 @@
                 Candidate Transparency/Accessibility Chart
         </a> -->
 
-        <a href="../cc-elections/state_assembly_legislative_district_1_issues.html" style="text-align: center; font-size: 1.5em;">Legislative 1 District Issues</a>
+        <!-- <a href="../cc-elections/state_assembly_legislative_district_1_issues.html" style="text-align: center; font-size: 1.5em;">Legislative 1 District Issues</a> -->
 
         <h4 class="sub-heading-ballot" style="text-align: center;">Legislative District 1 Issues</h4>
         <!-- dropdown content of job description-->
@@ -600,11 +600,17 @@
             </div> <!-- end of sample ballot -->
         </details>
 
-    <details>
-            <summary style="cursor:pointer; color:blue; text-decoration:underline; text-align: center; font-size: 1.5em;">View Official Ballot</summary>
-            <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" 
-            style="display:inline-block;cursor:pointer;background-color:#007BFF;color:white;padding:10px 20px;border-radius:8px;font-size:1.2em;font-weight:bold;
-            margin:10px 0;max-width:100%; height:auto; margin-top:10px;">
-    </details>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Unofficial Ballot</h4>
+        <!-- dropdown content of job description-->
+        <div class="job-description can-sec">
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+    
+                <img src="../../assets/officialBallots/governorAndAssemblyLD1.jpg" alt="Official Ballot" 
+                style="display:inline-block;cursor:pointer;background-color:#007BFF;color:white;padding:10px 20px;border-radius:8px;font-size:1.2em;font-weight:bold;
+                margin:10px 0;max-width:100%; height:auto; margin-top:10px;">
+            </details>
+        </div>
 </body>
 </html>
