ld3 race update 1

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -202,9 +202,13 @@
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <ol style="margin-top:10px; line-height:1.6;">
                     <li>If this is your first time taking a close look at local politics, make sure you read about what the role of this office is.</li>
+                    <br>
                     <li>Read the quick election summary to get an overhead view of what is going on in the race.</li>
+                    <br>
                     <li>Review the issues related to the district and office which we've been able to identify</li>
+                    <br>
                     <li>Review the candidates on the Unofficial Ballot.</li>
+                    <br>
                     <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
                 </ol>
             </details>
@@ -600,7 +604,7 @@
             </div> <!-- end of sample ballot -->
         </details>
 
-        <h4 class="sub-heading-ballot" style="text-align: center;">Unofficial Ballot</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Official Ballot</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
