county commissioners race update

--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -207,7 +207,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot">What does a General AssemblyPerson do?</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">What does a General AssemblyPerson do?</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
@@ -306,7 +306,7 @@
         </a>
 
         <br> -->
-        <h4 class="sub-heading-ballot" style="text-align: center;">Legislative District 1 Issues</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">Legislative District 3 Issues</h4>
         <!-- dropdown content of job description-->
         <div class="job-description can-sec">
 
