fairfield committee structure update

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -210,7 +210,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot">What does a commissioner do?</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">What does a commissioner do?</h4>
         <div class="job-description can-sec">
 
             
@@ -613,6 +613,7 @@
                 <div class="end-text">Form 14 - Vineland W6 D-4</div>
             </div>
         </details>
+        </div>
 
         <h4 class="sub-heading-ballot" style="text-align: center;">Official Ballot</h4>
         <!-- dropdown content of job description-->
@@ -626,6 +627,6 @@
                 margin:10px 0;max-width:100%; height:auto; margin-top:10px;">
             </details>
         </div>
-        </div>
+    </div>
 </body>
 </html>
