--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -207,7 +207,7 @@
                     <br>
                     <li>Review the issues related to the district and office which we've been able to identify</li>
                     <br>
-                    <li>Review the candidates on the Unofficial Ballot.</li>
+                    <li>Review the candidates on the Unofficial Ballot. Click on their names to learn more about them.</li>
                     <br>
                     <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
                 </ol>
