--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -198,9 +198,9 @@
                     <br>
                     <li>Read the quick election summary to get an overhead view of what is going on in the race.</li>
                     <br>
-                    <li>Review the issues related to the district and office which we've been able to identify</li>
+                    <li>Review the issues related to the district and office which we've been able to identify.</li>
                     <br>
-                    <li>Review the candidates on the Unofficial Ballot.</li>
+                    <li>Review the candidates on the Unofficial Ballot. Click on their names to learn more about them.</li>
                     <br>
                     <li>Take a look at the official ballot to ensure you know exactly where your preferred candidate will be.</li>
                 </ol>
@@ -348,8 +348,8 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
             <div class="sb-top-box"> 
-                <h3>PRIMARY ELECTION DATE: June 4th, 2025</h3>
-                <h2>SAMPLE BALLOT</h2>
+                <h3>PRIMARY ELECTION DATE: November 4th, 2025</h3>
+                <h2>UNOFFICIAL BALLOT</h2>
                 <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
                 <h3>General Assembly</h3>
                 <h4>DEMOCRATIC</h4>
