millville race page restructure

--- a/child_pages/cc-elections/fairfield_township_committee.html
+++ b/child_pages/cc-elections/fairfield_township_committee.html
@@ -151,6 +151,9 @@
       
       </dialog>
 
+      <br>
+      <br>
+
     <div id="sample-ballot">
 
         <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of This Page</h4>
@@ -172,7 +175,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot">What does a Township Committee Member do?</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">What does a Township Committee Member do?</h4>
         <div class="job-description can-sec">
 
             
@@ -505,6 +508,7 @@
                     <div class="end-text">Form 14 - Vineland W6 D-4</div>
                 </div>
             </details>
+            </div>
 
             <h4 class="sub-heading-ballot" style="text-align: center;">Official Ballot</h4>
             <!-- dropdown content of job description-->
