commercial race restructure

--- a/child_pages/cc-elections/bridgeton_school_board_2024.html
+++ b/child_pages/cc-elections/bridgeton_school_board_2024.html
@@ -172,7 +172,7 @@
             </details>
         </div>
 
-        <h4 class="sub-heading-ballot">What does a school board member do?</h4>
+        <h4 class="sub-heading-ballot" style="text-align: center;">What does a school board member do?</h4>
         <div class="job-description can-sec">
 
             
