race page banner test

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -185,6 +185,12 @@
       </dialog>
 
     <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
+     <br>
+     <br>
+
+    <div style="background:#007BFF; color:white; text-align:center; padding:20px; border-radius:8px; margin-bottom:20px;">
+        <h1 style="margin:0; font-size:2em;">Cumberland County Commissioners Election</h1>
+    </div>
 
     <br>
     <br>
