banners added to all election pages

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -173,7 +173,13 @@
 
     <br>
     <br>
-    <br>
+    <div style="text-align:center; padding:20px; border:1px solid #ddd; border-radius:10px; box-shadow:0px 2px 6px rgba(0,0,0,0.1); 
+    margin:20px auto; max-width:800px; background-color:#e0e0e09f;">
+  
+        <h1 style="margin:0; font-size:2em;">Gubernatorial Election</h1>
+
+    </div>
+
     <br>
 
     <div class="election-summary can-sec">
