--- a/child_pages/cc-elections/vsb_2024.html
+++ b/child_pages/cc-elections/vsb_2024.html
@@ -168,6 +168,18 @@
       
       </dialog>
 
+      <br>
+      <br>
+
+      <div style="text-align:center; padding:20px; border:1px solid #ddd; border-radius:10px; box-shadow:0px 2px 6px rgba(0,0,0,0.1); 
+        margin:20px auto; max-width:800px; background-color:#e0e0e09f;">
+    
+            <h1 style="margin:0; font-size:2em;">Vineland School Board Election</h1>
+
+        </div>
+
+    <br>
+
     <div id="sample-ballot">
 
         <h4 class="sub-heading-ballot" style="text-align: center;">Suggested Use of This Page</h4>
